--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBlack">#000</color>
     <color name="colorWhite">#fff</color>
+    <color name="colorRed">#96281B</color>
+    <color name="colorBlue">#1E8BC3</color>
 
 </resources>
