--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,10 +37,11 @@
 
     <Button
         android:text="Login"
-        android:layout_width="wrap_content"
+        android:layout_width="112dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="25dp"
+        android:textSize="20dp"
+        android:background="@drawable/button_shape"
         android:id="@+id/login_login_button"
         android:onClick="login" />
 
