--- a/app/src/main/res/layout/activity_score_board.xml
+++ b/app/src/main/res/layout/activity_score_board.xml
@@ -103,6 +103,7 @@
             android:text="Start New Battle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_shape"
             android:id="@+id/gotobattle" />
 
     </LinearLayout>
